# transformers.js.py

./: .flake8  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: js.yml  main.yml
pyodide-e2e/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
pyodide-e2e/src/: main.ts  vite-env-override.d.ts  worker.ts
pyodide-e2e/src/tests/: attr-assignment.test.ts  audio.test.ts  deferred-import-proxies.test.ts  env.test.ts  global-state.test.ts  import.test.ts  lazy-import-proxies.test.ts  pipeline.test.ts  rawimage.test.ts  tensor.test.ts  url.test.ts  utils.ts  version.test.ts
src/transformers_js_py/: __init__.py  _version.py  proxies.py
transformers/: __init__.py
transformers_js/: __init__.py  file_utils.py
transformers_js_py/: __init__.py  audio.py  deferred_import_proxies.py  lazy_import_proxies.py  proxies.py  url.py
