[project]
name = "transformers-js-py"
version = "0.19.0"
description = ""
authors = [
    {name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
repository = "https://github.com/whitphx/transformers.js.py"

[project.optional-dependencies]
audio = [
    "numpy>=2.1.2",
    "scipy>=1.14.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "js",
    "pyodide.*",
]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "bump-my-version>=0.28.1",
    "mypy>=1.13.0",
    "numpy>=2.1.3",
    "ruff>=0.8.1",
    "types-pillow>=10.2.0.20240822",
]

[tool.bumpversion]
current_version = "0.19.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/pyodide-e2e",
]
