[project]
name = "transformers-js-py"
description = ""
authors = [
    {name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[project.urls]
repository = "https://github.com/whitphx/transformers.js.py"

[project.optional-dependencies]
audio = [
    "numpy>=2.1.2",
    "scipy>=1.14.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "js",
    "pyodide.*",
]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "bump-my-version>=0.28.1",
    "mypy>=1.13.0",
    "numpy>=2.1.3",
    "ruff>=0.8.1",
    "types-pillow>=10.2.0.20240822",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/pyodide-e2e",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/transformers_js_py",
    "src/transformers_js",
]
